Updating name lol

--- a/git-pull-ansible.yaml
+++ b/git-pull-ansible.yaml
@@ -1,5 +1,5 @@
-- name: Installing bareos-fd 
-  hosts: all:!nas_servers:!hypervisor_servers:!bareos_servers
+- name: Updating git on ansible 
+  hosts: ansible
   become: yes
   gather_facts: no
   tasks:
