--- a/ansible.cfg
+++ b/ansible.cfg
@@ -12,6 +12,6 @@
 [defaults]
 remote_user = ansible
 forks = 30
-private_key_file = .ssh/id_rsa
+private_key_file = ~/.ssh/id_rsa
 # callbacks_enabled = profile_tasks
 host_key_checking = False
