Starting the vms now

--- a/proxmox-create-ceph-vms.yaml
+++ b/proxmox-create-ceph-vms.yaml
@@ -6,3 +6,6 @@
    - name: Create the VMs
      import_role:
        name: proxmox-create-vm
+   - name: Start the VMs
+     import_role:
+       name: proxmox-start-vm
